# pupperv3-monorepo

./: NAV2_RUNBOOK.md  README.md
ai/isaac_lab/: .gitignore  README.en.md  README.md  pyproject.toml
ai/isaac_lab/deploy/: diag_cmd_response.py  pupper_onnx_node.py  pupper_policy.service  pupper_policy.sh
ai/isaac_lab/media/bilibili_migration_video/: README.md  SCRIPT.md  build_deck.js  deck_template.js  make_video.py
ai/isaac_lab/pupper_isaaclab/: __init__.py
ai/isaac_lab/pupper_isaaclab/assets/: __init__.py  pupper.py
ai/isaac_lab/pupper_isaaclab/assets/usd/: .asset_hash  config.yaml  pupper_v3.usd
ai/isaac_lab/pupper_isaaclab/assets/usd/configuration/: pupper_v3_physics.usd  pupper_v3_robot.usd  pupper_v3_sensor.usd
ai/isaac_lab/pupper_isaaclab/tasks/: __init__.py
ai/isaac_lab/pupper_isaaclab/tasks/locomotion/: __init__.py  delayed_action.py  pupper_env_cfg.py  rewards.py
ai/isaac_lab/pupper_isaaclab/tasks/locomotion/agents/: __init__.py  rsl_rl_ppo_cfg.py
ai/isaac_lab/scripts/: check_contract.py  cli_args.py  convert_pupper_urdf.py  play.py  train.py  verify_onnx.py
ai/llm-ui/agent-starter-python/: README.md
ai/llm-ui/agent-starter-python/src/: agent.py  dashscope_tts.py  fisheye_utils.py  pupster.py  ros_tool_server.py  system_prompt.md
pi_home/: README.md  pupper-bridge.service.example  pupper_bridge.py  pupper_tts_worker.py  pupper_tts_worker_cosyvoice.py
pi_overlay/: README.md
pi_overlay/ldlidar_ros2_ws/: README.md  ldlidar_overlay.repos
pi_overlay/nav2_ws/: README.md  nav2_overlay.repos
pupper-rs/src/: main.rs
pupper-rs/src/eyes/: drawing.rs  expression.rs  mod.rs
robot/utils/: robot.sh
ros2_ws/src/neural_controller/launch/: config.yaml  launch.py
ros2_ws/src/pupper_nav/: CMakeLists.txt  package.xml
ros2_ws/src/pupper_nav/config/: nav2_params.yaml
ros2_ws/src/pupper_nav/launch/: nav.launch.py
ros2_ws/src/pupper_odometry/: package.xml  setup.cfg  setup.py
ros2_ws/src/pupper_slam/: CMakeLists.txt  package.xml
ros2_ws/src/pupper_slam/config/: mapper_params_online_async.yaml
ros2_ws/src/pupper_slam/launch/: mapping.launch.py  slam.launch.py
ros2_ws/src/pupper_slam/scripts/: patch_slam_toolbox_no_rviz.py
scripts_local/: build_nav2_source_pi.py  build_slam_jazzy_pi.py  deploy_nav.py  pi_nav_goal.sh  pi_nav_initialpose.sh  pi_nav_status.sh  pi_reset_slam.sh  pi_save_map.sh  pi_start_nav.sh
(+7 files in other folders)
