[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pupper-isaaclab"
version = "0.1.0"
description = "Pupper v3 quadruped RL training on NVIDIA Isaac Lab (PhysX + rsl_rl PPO)."
requires-python = ">=3.10"
# NOTE: isaaclab / isaacsim / rsl_rl come from the Isaac Lab install; they are
# intentionally NOT listed here. Install this package into the Isaac Lab python
# environment with:  <isaaclab python> -m pip install -e ai/isaac_lab
dependencies = []

[tool.setuptools.packages.find]
include = ["pupper_isaaclab*"]
